feat: add toggle block menu item

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -514,6 +514,7 @@
   "Outdent": "Outdent",
   "Video": "Video",
   "None": "None",
+  "Toggle block": "Toggle block",
   "Could not import file": "Could not import file",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
