--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -515,6 +515,8 @@
   "Video": "Video",
   "None": "None",
   "Toggle block": "Toggle block",
+  "Toggle": "Toggle",
+  "Click to type here": "Click to type here",
   "Could not import file": "Could not import file",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
