feat: list keyboard shortcuts

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -798,6 +798,10 @@
   "Outdent list item": "Outdent list item",
   "Move list item up": "Move list item up",
   "Move list item down": "Move list item down",
+  "Toggle blocks": "Toggle blocks",
+  "Open / Close": "Open / Close",
+  "Indent item": "Indent item",
+  "Outdent item": "Outdent item",
   "Tables": "Tables",
   "Insert row": "Insert row",
   "Next cell": "Next cell",
