fix: placeholder to inform how to exit toggle block

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -517,6 +517,7 @@
   "Toggle block": "Toggle block",
   "Toggle": "Toggle",
   "Click to type here": "Click to type here",
+  "Type or press 'Shift-Tab' to exit": "Type or press 'Shift-Tab' to exit",
   "Could not import file": "Could not import file",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
