--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -80,7 +80,6 @@
   "Create template": "Create template",
   "Open random document": "Open random document",
   "Search documents for \"{{searchQuery}}\"": "Search documents for \"{{searchQuery}}\"",
-  "Move to workspace": "Move to workspace",
   "Move": "Move",
   "Move {{ documentType }}": "Move {{ documentType }}",
   "Are you sure you want to archive this document?": "Are you sure you want to archive this document?",
@@ -137,6 +136,7 @@
   "Template deleted": "Template deleted",
   "Deleting": "Deleting",
   "Are you sure about that? Deleting the <em>{{ templateName }}</em> template is permanent.": "Are you sure about that? Deleting the <em>{{ templateName }}</em> template is permanent.",
+  "Move template": "Move template",
   "Invite people": "Invite people",
   "Invite to workspace": "Invite to workspace",
   "Promote to {{ role }}": "Promote to {{ role }}",
@@ -205,6 +205,12 @@
   "Copy to <em>{{ location }}</em>": "Copy to <em>{{ location }}</em>",
   "Search collections & documents": "Search collections & documents",
   "No results found": "No results found",
+  "Select a location to move": "Select a location to move",
+  "Document moved": "Document moved",
+  "Couldn’t move the document, try again?": "Couldn’t move the document, try again?",
+  "Move to <em>{{ location }}</em>": "Move to <em>{{ location }}</em>",
+  "Template moved": "Template moved",
+  "Couldn’t move the template, try again?": "Couldn’t move the template, try again?",
   "New": "New",
   "Only visible to you": "Only visible to you",
   "Draft": "Draft",
@@ -400,8 +406,7 @@
   "Star document": "Star document",
   "Template created, go ahead and customize it": "Template created, go ahead and customize it",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.",
-  "Enable other members to use the template immediately": "Enable other members to use the template immediately",
-  "Location": "Location",
+  "Visibility": "Visibility",
   "Admins can manage the workspace and access billing.": "Admins can manage the workspace and access billing.",
   "Editors can create, edit, and comment on documents.": "Editors can create, edit, and comment on documents.",
   "Viewers can only view and comment on documents.": "Viewers can only view and comment on documents.",
@@ -714,10 +719,6 @@
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>._plural": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested documents</em>.",
   "If you’d like the option of referencing or restoring the {{noun}} in the future, consider archiving it instead.": "If you’d like the option of referencing or restoring the {{noun}} in the future, consider archiving it instead.",
-  "Select a location to move": "Select a location to move",
-  "Document moved": "Document moved",
-  "Couldn’t move the document, try again?": "Couldn’t move the document, try again?",
-  "Move to <em>{{ location }}</em>": "Move to <em>{{ location }}</em>",
   "Couldn’t create the document, try again?": "Couldn’t create the document, try again?",
   "Document permanently deleted": "Document permanently deleted",
   "Are you sure you want to permanently delete the <em>{{ documentTitle }}</em> document? This action is immediate and cannot be undone.": "Are you sure you want to permanently delete the <em>{{ documentTitle }}</em> document? This action is immediate and cannot be undone.",
