fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -120,9 +120,9 @@
   "Log out": "Ausloggen",
   "Mark notifications as read": "Markiere Benachrichtigungen als gelesen",
   "Archive all notifications": "Archiviere alle Benachrichtigungen",
-  "New App": "New App",
-  "New Application": "New Application",
-  "This version of the document was deleted": "This version of the document was deleted",
+  "New App": "Neue Anwendung",
+  "New Application": "Neue Anwendung",
+  "This version of the document was deleted": "Diese Version des Dokuments wurde gelöscht",
   "Link copied": "Link wurde kopiert",
   "Dark": "Dunkel",
   "Light": "Hell",
@@ -164,7 +164,7 @@
   "Public document sharing": "Öffentliches Teilen von Dokumenten",
   "Allow documents within this collection to be shared publicly on the internet.": "Erlaube die öffentliche Freigabe von Dokumenten in dieser Sammlung im Internet.",
   "Commenting": "Kommentieren",
-  "Allow commenting on documents within this collection.": "Allow commenting on documents within this collection.",
+  "Allow commenting on documents within this collection.": "Erlaube das Kommentieren von Dokumenten innerhalb dieser Sammlung.",
   "Saving": "Speichert",
   "Save": "Speichern",
   "Creating": "Wird erstellt",
@@ -239,7 +239,7 @@
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Entschuldigung, ein Fehler ist aufgetreten{{notified}}. Bitte versuche die Seite neu zu laden, es könnte inzwischen wieder funktionieren.",
   "our engineers have been notified": "unsere Entwickler wurden benachrichtigt",
   "Show detail": "Details anzeigen",
-  "Revision deleted": "Revision deleted",
+  "Revision deleted": "Überarbeitung gelöscht",
   "Current version": "Aktuelle Version",
   "{{userName}} edited": "{{userName}} bearbeitete",
   "{{userName}} archived": "{{userName}} archivierte",
@@ -262,8 +262,8 @@
   "You will receive an email when it's complete.": "Du erhältst eine E-Mail, sobald der Vorgang abgeschlossen ist.",
   "Include attachments": "Anhänge beifügen",
   "Including uploaded images and files in the exported data": "Einbeziehung hochgeladener Bilder und Dateien in die exportierten Daten",
-  "{{count}} more user": "{{count}} more user",
-  "{{count}} more user_plural": "{{count}} more users",
+  "{{count}} more user": "{{count}} mehr Nutzer",
+  "{{count}} more user_plural": "{{count}} weitere Nutzer",
   "Filter": "Filter",
   "No results": "Keine Ergebnisse",
   "{{authorName}} created <3></3>": "{{authorName}} hat <3></3> erstellt",
@@ -303,13 +303,13 @@
   "Unknown": "Unbekannt",
   "Mark all as read": "Alle als gelesen markieren",
   "You're all caught up": "Du bist auf dem neusten Stand",
-  "Icon": "Icon",
-  "My App": "My App",
+  "Icon": "Symbol",
+  "My App": "Meine Anwendung",
   "Tagline": "Tagline",
-  "A short description": "A short description",
-  "Callback URLs": "Callback URLs",
+  "A short description": "Eine kurze Beschreibung",
+  "Callback URLs": "Rückruf-URLs",
   "Published": "Veröffentlicht",
-  "Allow this app to be installed by other workspaces": "Allow this app to be installed by other workspaces",
+  "Allow this app to be installed by other workspaces": "Erlaube anderen Arbeitsbereichen diese App zu installieren",
   "{{ username }} reacted with {{ emoji }}": "{{ username }} hat mit {{ emoji }} reagiert",
   "{{ firstUsername }} and {{ secondUsername }} reacted with {{ emoji }}": "{{ firstUsername }} und {{ secondUsername }} reagierten mit {{ emoji }}",
   "{{ firstUsername }} and {{ count }} others reacted with {{ emoji }}": "{{ firstUsername }} und {{ count }} weitere reagierten mit {{ emoji }}",
@@ -364,8 +364,8 @@
   "Publish to internet": "Im Internet veröffentlichen",
   "Search engine indexing": "Suchmaschinenindexierung",
   "Disable this setting to discourage search engines from indexing the page": "Deaktivieren Sie diese Einstellung, um Suchmaschinen davon abzuhalten, die Seite zu indizieren",
-  "Show last modified": "Show last modified",
-  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Show last modified": "Änderungsdatum anzeigen",
+  "Display the last modified timestamp on the shared page": "Zeige das Änderungsdatum auf der geteilten Seite",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "Verschachtelte Dokumente werden nicht im Web geteilt. Schalten Sie die Freigabe um, um den Zugriff zu ermöglichen, dies wird das Standardverhalten in Zukunft sein",
   "{{ userName }} was added to the document": "{{ userName }} wurde dem Dokument hinzugefügt",
   "{{ count }} people added to the document": "{{ count }} Personen zu dem Dokument eingeladen",
@@ -453,7 +453,7 @@
   "Create a new child doc": "Neues untergeordnetes Dokument erstellen",
   "Delete table": "Tabelle löschen",
   "Delete file": "Datei löschen",
-  "Width x Height": "Width x Height",
+  "Width x Height": "Breite x Höhe",
   "Download file": "Datei herunterladen",
   "Replace file": "Datei ersetzen",
   "Delete image": "Bild löschen",
@@ -499,8 +499,8 @@
   "Toggle header": "Kopfzeile umschalten",
   "Math inline (LaTeX)": "Mathe-Inline (LaTeX)",
   "Math block (LaTeX)": "Mathe-Block (LaTeX)",
-  "Merge cells": "Merge cells",
-  "Split cell": "Split cell",
+  "Merge cells": "Zellen zusammenführen",
+  "Split cell": "Zelle aufteilen",
   "Tip": "Hinweis",
   "Tip notice": "Tipp Hinweis",
   "Warning": "Warnung",
@@ -518,17 +518,17 @@
   "Unsubscribed from document": "Dokument nicht abonniert",
   "Unsubscribed from collection": "Von der Sammlung abgemeldet",
   "Account": "Konto",
-  "API & Apps": "API & Apps",
+  "API & Apps": "API & Anwendungen",
   "Details": "Details",
   "Security": "Sicherheit",
   "Features": "Funktionen",
   "Members": "Mitglieder",
   "Groups": "Gruppen",
   "API Keys": "API-Schlüssel",
-  "Applications": "Applications",
+  "Applications": "Anwendungen",
   "Shared Links": "Geteilte Links",
   "Import": "Import",
-  "Install": "Install",
+  "Install": "Installieren",
   "Integrations": "Integrationen",
   "Revoke token": "Token widerrufen",
   "Revoke": "Widerrufen",
@@ -547,7 +547,7 @@
   "Document options": "Dokument-Einstellungen",
   "Choose a collection": "Sammlung auswählen",
   "Subscription inherited from collection": "Abonnement aus der Sammlung vererbt",
-  "Apply template": "Apply template",
+  "Apply template": "Vorlage übernehmen",
   "Enable embeds": "Einbettungen aktivieren",
   "Export options": "Exportoptionen",
   "Group members": "Gruppenmitglieder",
@@ -561,10 +561,10 @@
   "New child document": "Neues Unterdokument",
   "Save in workspace": "Im Arbeitsbereich speichern",
   "Notification settings": "Benachrichtigungs-Einstellungen",
-  "Revoke {{ appName }}": "Revoke {{ appName }}",
+  "Revoke {{ appName }}": "Entferne {{ appName }}",
   "Revoking": "Wird widerrufen",
-  "Are you sure you want to revoke access?": "Are you sure you want to revoke access?",
-  "Delete app": "Delete app",
+  "Are you sure you want to revoke access?": "Sind Sie sicher, dass Sie den Zugriff widerrufen wollen?",
+  "Delete app": "Anwendung löschen",
   "Revision options": "Version-Einstellungen",
   "Share link revoked": "Freigabelink widerrufen",
   "Share link copied": "Freigabelink wurde kopiert",
@@ -832,13 +832,13 @@
   "Authentication failed – this login method was disabled by a workspace admin.": "Authentifizierung fehlgeschlagen – diese Login-Methode wurde von deinem Bereichs-Administrator deaktiviert.",
   "The workspace you are trying to join requires an invite before you can create an account.<1></1>Please request an invite from your workspace admin and try again.": "Der Arbeitsbereich, dem du beitreten möchtest, benötigt eine Einladung, bevor du ein Konto erstellen kannst. <1></1>Bitte fordere eine Einladung von deinem Arbeitsbereich-Administrator an und versuche es erneut.",
   "Sorry, an unknown error occurred.": "Entschuldigung, ein unbekannter Fehler ist aufgetreten.",
-  "Choose a workspace": "Choose a workspace",
+  "Choose a workspace": "Arbeitsbereich auswählen",
   "Choose an {{ appName }} workspace or login to continue connecting this app": "Choose an {{ appName }} workspace or login to continue connecting this app",
-  "Create workspace": "Create workspace",
+  "Create workspace": "Arbeitsbereich erstellen",
   "Setup your workspace by providing a name and details for admin login. You can change these later.": "Setup your workspace by providing a name and details for admin login. You can change these later.",
   "Workspace name": "Arbeitsbereichs-Name",
-  "Admin name": "Admin name",
-  "Admin email": "Admin email",
+  "Admin name": "Admin Name",
+  "Admin email": "Admin-E-Mail",
   "Login": "Anmelden",
   "Error": "Fehler",
   "Failed to load configuration.": "Fehler beim Laden der Konfiguration.",
@@ -856,19 +856,19 @@
   "You signed in with {{ authProviderName }} last time.": "Du hast dich das letzte Mal mit {{ authProviderName }} angemeldet.",
   "Or": "Oder",
   "Already have an account? Go to <1>login</1>.": "Du hast bereits ein Konto? <1>Anmelden</1>.",
-  "An error occurred": "An error occurred",
+  "An error occurred": "Ein Fehler ist aufgetreten",
   "The OAuth client could not be found, please check the provided client ID": "The OAuth client could not be found, please check the provided client ID",
   "The OAuth client could not be loaded, please check the redirect URI is valid": "The OAuth client could not be loaded, please check the redirect URI is valid",
   "Required OAuth parameters are missing": "Required OAuth parameters are missing",
-  "Authorize": "Authorize",
-  "{{ appName }} wants to access {{ teamName }}": "{{ appName }} wants to access {{ teamName }}",
-  "By <em>{{ developerName }}</em>": "By <em>{{ developerName }}</em>",
+  "Authorize": "Autorisieren",
+  "{{ appName }} wants to access {{ teamName }}": "{{ appName }} möchte auf {{ teamName }} zugreifen",
+  "By <em>{{ developerName }}</em>": "Von <em>{{ developerName }}</em>",
   "{{ appName }} will be able to access your account and perform the following actions": "{{ appName }} will be able to access your account and perform the following actions",
-  "read": "read",
-  "write": "write",
-  "read and write": "read and write",
-  "API keys": "API keys",
-  "attachments": "attachments",
+  "read": "lesen",
+  "write": "schreiben",
+  "read and write": "lesen und schreiben",
+  "API keys": "API Schlüssel",
+  "attachments": "Anhänge",
   "collections": "collections",
   "comments": "comments",
   "documents": "documents",
