--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -869,21 +869,21 @@
   "read and write": "lesen und schreiben",
   "API keys": "API Schlüssel",
   "attachments": "Anhänge",
-  "collections": "collections",
-  "comments": "comments",
-  "documents": "documents",
-  "events": "events",
-  "groups": "groups",
-  "integrations": "integrations",
-  "notifications": "notifications",
-  "reactions": "reactions",
+  "collections": "Sammlungen",
+  "comments": "Kommentare",
+  "documents": "Dokumente",
+  "events": "Ereignisse",
+  "groups": "Gruppen",
+  "integrations": "Integrationen",
+  "notifications": "Benachrichtigungen",
+  "reactions": "Reaktionen",
   "pins": "pins",
   "shares": "shares",
-  "users": "users",
-  "teams": "teams",
-  "workspace": "workspace",
-  "Read all data": "Read all data",
-  "Write all data": "Write all data",
+  "users": "Benutzer",
+  "teams": "Teams",
+  "workspace": "Arbeitsbereich",
+  "Read all data": "Alle Daten lesen",
+  "Write all data": "Alle Daten schreiben",
   "Any collection": "Beliebige Sammlung",
   "All time": "Gesamter Zeitraum",
   "Past day": "Letzter Tag",
@@ -901,27 +901,27 @@
   "No documents found for your search filters.": "Keine Dokumente für diese Suchfilter gefunden.",
   "Create personal API keys to authenticate with the API and programatically control\n      your workspace's data. For more details see the <em>developer documentation</em>.": "Create personal API keys to authenticate with the API and programatically control\n      your workspace's data. For more details see the <em>developer documentation</em>.",
   "API keys have been disabled by an admin for your account": "API keys have been disabled by an admin for your account",
-  "Application access": "Application access",
+  "Application access": "Anwendungszugriff",
   "Manage which third-party and internal applications have been granted access to your {{ appName }} account.": "Manage which third-party and internal applications have been granted access to your {{ appName }} account.",
   "API": "API",
   "API keys can be used to authenticate with the API and programatically control\n          your workspace's data. For more details see the <em>developer documentation</em>.": "API-Schlüssel können verwendet werden, um sich mit der API zu authentifizieren und die Daten des Arbeitsbereiches\n          programmatisch zu steuern. Weitere Details finden Sie in der <em>Entwicklerdokumentation</em>.",
-  "Application published": "Application published",
-  "Application updated": "Application updated",
+  "Application published": "Anwendung veröffentlicht",
+  "Application updated": "Anwendung aktualisiert",
   "Client secret rotated": "Client secret rotated",
   "Rotate secret": "Rotate secret",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
-  "Developer name": "Developer name",
-  "Developer URL": "Developer URL",
+  "Developer name": "Entwicklername",
+  "Developer URL": "Entwickler-URL",
   "Allow users from other workspaces to authorize this app": "Allow users from other workspaces to authorize this app",
-  "Credentials": "Credentials",
-  "OAuth client ID": "OAuth client ID",
-  "The public identifier for this app": "The public identifier for this app",
-  "OAuth client secret": "OAuth client secret",
+  "Credentials": "Zugangsdaten",
+  "OAuth client ID": "OAuth-Client-ID",
+  "The public identifier for this app": "Der öffentliche Identifikator für diese App",
+  "OAuth client secret": "OAuth Client Secret",
   "Store this value securely, do not expose it publicly": "Store this value securely, do not expose it publicly",
   "Where users are redirected after authorizing this app": "Where users are redirected after authorizing this app",
-  "Authorization URL": "Authorization URL",
+  "Authorization URL": "Autorisierungs-URL",
   "Where users are redirected to authorize this app": "Where users are redirected to authorize this app",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.",
   "by {{ name }}": "von {{ name }}",
@@ -977,7 +977,7 @@
   "No people matching your search": "Keine Personen, die Ihrer Suche entsprechen",
   "No people left to add": "Keine Personen übrig zum Hinzufügen",
   "Date created": "Erstellungsdatum",
-  "Crop Image": "Crop Image",
+  "Crop Image": "Bild zuschneiden",
   "Crop image": "Bild zuschneiden",
   "How does this work?": "Wie funktioniert das?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Du kannst eine ZIP-Datei importieren, die zuvor mithilfe der JSON-Export Funktion exportiert wurde. Öffne dazu in {{ appName }} <em>Exportieren</em> in der Seitenleiste Einstellungen und klicke auf <em>Daten exportieren</em>.",
@@ -991,11 +991,11 @@
   "{{ count }} document imported_plural": "{{ count }} dokumente importiert",
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Sie können eine ZIP-Datei importieren, die zuvor aus einer Outline-Installation exportiert wurde. Es werden Sammlungen, Dokumente und Bilder importiert. Rufen Sie in Outline <em>Exportieren</em> in der Seitenleiste der Einstellungen auf und klicken Sie auf <em>Daten exportierten</em>.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "Drag-and-Drop die Zip-Datei von Markdown Export Funktion in {{appName}}, oder klicke auf Upload",
-  "Configure": "Configure",
+  "Configure": "Konfigurieren",
   "Connect": "Verbinden",
   "Last active": "Zuletzt aktiv",
   "Guest": "Gast",
-  "Never used": "Never used",
+  "Never used": "Niemals verwendet",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Are you sure you want to delete the {{ appName }} application? This cannot be undone.",
   "Shared by": "Geteilt durch",
   "Date shared": "Datum geteilt",
@@ -1017,7 +1017,7 @@
   "Display": "Anzeige",
   "The logo is displayed at the top left of the application.": "Das Logo wird oben links in der Anwendung angezeigt.",
   "The workspace name, usually the same as your company name.": "Der Name des Arbeitsbereichs, in der Regel der Name Ihres Unternehmens.",
-  "Description": "Description",
+  "Description": "Beschreibung",
   "A short description of your workspace.": "A short description of your workspace.",
   "Theme": "Design",
   "Customize the interface look and feel.": "Aussehen und Verhalten anpassen.",
