--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -1243,6 +1243,6 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} updated {{ timeAgo }}",
   "You created {{ timeAgo }}": "You created {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}",
-  "Sorry, invalid embed URL": "Sorry, invalid embed URL",
+  "Sorry, invalid embed link": "Sorry, invalid embed link",
   "Error loading data": "Error loading data"
 }
