--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -786,7 +786,7 @@
   "Underline": "밑줄",
   "Undo": "실행 취소",
   "Redo": "복원하기",
-  "Move block up": "Move block up",
+  "Move block up": "블록을 위로 이동",
   "Move block down": "Move block down",
   "Lists": "목록",
   "Toggle task list item": "작업 목록 항목 전환",
