--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -787,7 +787,7 @@
   "Undo": "실행 취소",
   "Redo": "복원하기",
   "Move block up": "블록을 위로 이동",
-  "Move block down": "Move block down",
+  "Move block down": "블록을 아래로 이동",
   "Lists": "목록",
   "Toggle task list item": "작업 목록 항목 전환",
   "Tab": "탭",
