fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -818,6 +818,7 @@
   "To continue, enter your workspace’s subdomain.": "계속하려면 워크스페이스의 서브도메인을 입력하세요.",
   "subdomain": "하위 도메인",
   "Continue": "계속",
+  "Sorry, the code you entered is invalid or has expired.": "Sorry, the code you entered is invalid or has expired.",
   "The domain associated with your email address has not been allowed for this workspace.": "귀하의 이메일 주소와 연결된 도메인이 이 워크스페이스에 허용되지 않았습니다.",
   "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.": "로그인할 수 없습니다. 워크스페이스의 맞춤 URL로 이동한 다음 다시 로그인을 시도하세요.<1></1> 워크스페이스에 초대받은 경우 초대 이메일에서 해당 링크를 찾을 수 있습니다.",
   "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.": "죄송합니다. 개인 Gmail 주소로는 새 계정을 만들 수 없습니다.<1></1> 대신 Google Workspaces 계정을 사용하세요.",
@@ -851,6 +852,7 @@
   "Choose workspace": "워크스페이스 선택",
   "This login method requires choosing your workspace to continue": "이 로그인 방법으로 계속하려면 워크스페이스를 선택해야 합니다.",
   "Check your email": "이메일을 확인하십시오",
+  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "계정이 있는 경우 로그인 가능한 매직 링크가 이메일 <em>{{ emailLinkSentTo }}</em> 로 전송되었습니다.",
   "Back to login": "로그인으로 돌아가기",
   "Get started by choosing a sign-in method for your new workspace below…": "아래에서 새 워크스페이스의 로그인 방법을 선택하여 시작하세요.",
