fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -818,6 +818,7 @@
   "To continue, enter your workspace’s subdomain.": "Um fortzufahren, geben Sie die Subdomain Ihres Arbeitsbereichs ein.",
   "subdomain": "Subdomäne",
   "Continue": "Weiter",
+  "Sorry, the code you entered is invalid or has expired.": "Sorry, the code you entered is invalid or has expired.",
   "The domain associated with your email address has not been allowed for this workspace.": "Die Domäne, die mit deiner E-Mail-Adresse verknüpft ist, wurde für diesen Arbeitsbereich nicht erlaubt.",
   "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.": "Anmeldung nicht möglich. Bitte navigiere zur URL deines Arbeitsbereiches und versuche erneut dich anzumelden. <1></1>Wenn du in einen Arbeitsbereich eingeladen wurdest, findest du den Link in der Einladungs-Mail.",
   "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.": "Leider kann ein neues Konto nicht mit einer persönlichen Gmail-Adresse erstellt werden. <1></1>Bitte verwende stattdessen ein Google Arbeitsbereich-Konto.",
@@ -851,6 +852,7 @@
   "Choose workspace": "Arbeitsbereich wählen",
   "This login method requires choosing your workspace to continue": "Diese Anmeldemethode erfordert die Auswahl Ihres Arbeitsbereichs, um fortzufahren",
   "Check your email": "Überprüfe deine E-Mails",
+  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "An die E-Mail <em>{{ emailLinkSentTo }}</em> wurde ein Einmal-Login-Link geschickt, sofern ein Benutzerkonto mit dieser E-Mail existiert.",
   "Back to login": "Zurück zur Anmeldung",
   "Get started by choosing a sign-in method for your new workspace below…": "Beginne mit der Auswahl einer Anmeldemethode für deinen neuen Arbeitsbereich…",
