--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -818,6 +818,7 @@
   "To continue, enter your workspace’s subdomain.": "Voer het subdomein van uw werkruimte in om door te gaan.",
   "subdomain": "subdomein",
   "Continue": "Doorgaan",
+  "Sorry, the code you entered is invalid or has expired.": "Sorry, the code you entered is invalid or has expired.",
   "The domain associated with your email address has not been allowed for this workspace.": "Het aan uw e-mailadres gekoppelde domein is niet toegestaan voor deze werkruimte.",
   "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.": "Inloggen niet mogelijk. Navigeer naar de aangepaste URL van uw werkruimte en probeer dan opnieuw in te loggen. <1></1>Wanneer u uitgenodigd bent voor een werkruimte, vind u de link hiernaar in de uitnodigingsmail.",
   "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.": "Sorry, een nieuw account kan niet worden aangemaakt met een persoonlijk Gmail adres.<1></1>Gebruik in plaats daarvan een Google Workspaces account.",
@@ -851,6 +852,7 @@
   "Choose workspace": "Werkruimte kiezen",
   "This login method requires choosing your workspace to continue": "Deze login methode vereist dat je je werkruimte kiest om verder te gaan",
   "Check your email": "Controleer je e-mail",
+  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "Er is een magische aanmeldlink verzonden naar de e-mail <em>{{ emailLinkSentTo }}</em> als er een account bestaat.",
   "Back to login": "Terug naar inloggen",
   "Get started by choosing a sign-in method for your new workspace below…": "Ga aan de slag door een inlogmethode te kiezen voor uw nieuwe team onder…",
