--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -818,6 +818,7 @@
   "To continue, enter your workspace’s subdomain.": "Pour continuer, entrez le sous-domaine de votre espace de travail.",
   "subdomain": "sous-domaine",
   "Continue": "Continuer",
+  "Sorry, the code you entered is invalid or has expired.": "Sorry, the code you entered is invalid or has expired.",
   "The domain associated with your email address has not been allowed for this workspace.": "Le domaine associé à votre adresse e-mail n'a pas été autorisé pour cet espace de travail.",
   "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.": "Impossible de se connecter. Veuillez accéder à l'URL personnalisée de votre espace de travail, puis réessayez de vous connecter.<1></1> Si vous avez été invité à rejoindre un espace de travail, vous trouverez un lien vers celui-ci dans l'e-mail d'invitation.",
   "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.": "Désolé, un nouveau compte ne peut pas être créé avec une adresse Gmail personnelle.<1></1> Veuillez plutôt utiliser un compte Google Workspaces.",
@@ -851,6 +852,7 @@
   "Choose workspace": "Choisir un espace de travail",
   "This login method requires choosing your workspace to continue": "Cette méthode de connexion nécessite de choisir votre espace de travail pour continuer",
   "Check your email": "Vérifiez votre messagerie",
+  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "Si cet utilisateur existe, un lien de connexion automatique lui a été envoyé sur <em>{{ emailLinkSentTo }}</em>.",
   "Back to login": "Retour à la page d'identification",
   "Get started by choosing a sign-in method for your new workspace below…": "Commencez par choisir ci-dessous une méthode de connexion pour votre nouvel espace de travail…",
