--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -818,6 +818,7 @@
   "To continue, enter your workspace’s subdomain.": "要继续，请输入你的工作区的子域。",
   "subdomain": "子域",
   "Continue": "继续操作",
+  "Sorry, the code you entered is invalid or has expired.": "Sorry, the code you entered is invalid or has expired.",
   "The domain associated with your email address has not been allowed for this workspace.": "与你的电子邮件地址相关联的域未被允许在此工作区使用。",
   "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.": "无法登录。请导航至你工作区的自定义 URL，然后尝试重新登录。<1></1>如果你受邀加入某个工作区，你会在邀请电子邮件中找到指向该工作区的链接。",
   "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.": "抱歉，不能使用个人 Gmail 地址创建新帐户。<1></1>请改用 Google Workspaces 帐户。",
@@ -851,6 +852,7 @@
   "Choose workspace": "选择工作区",
   "This login method requires choosing your workspace to continue": "这种登录方法需要选择工作区才能继续",
   "Check your email": "检查你的电子邮件",
+  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "如果帐户存在，魔法登录链接已发送至电子邮件 <em>{{ emailLinkSentTo }}</em>。",
   "Back to login": "回到登录界面",
   "Get started by choosing a sign-in method for your new workspace below…": "先为你的新工作区选择一种登录方法，再继续…",
