--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -818,6 +818,7 @@
   "To continue, enter your workspace’s subdomain.": "Para continuar, introduce el subdominio de tu espacio de trabajo.",
   "subdomain": "subdominio",
   "Continue": "Continuar",
+  "Sorry, the code you entered is invalid or has expired.": "Sorry, the code you entered is invalid or has expired.",
   "The domain associated with your email address has not been allowed for this workspace.": "El dominio asociado con tu dirección de correo electrónico no está permitido para este espacio de trabajo.",
   "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.": "No se pudo iniciar sesión. Por favor, ve a la URL personalizada de tu espacio de trabajo e intenta iniciar sesión de nuevo.<1></1>Si has sido invitado a un espacio de trabajo, encontrarás un enlace a este en el correo electrónico de invitación.",
   "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.": "Lo sentimos, no se puede crear una nueva cuenta con una dirección de correo electrónico personal de Gmail.<1></1>Por favor, utilice una cuenta de Google Workspaces en su lugar.",
@@ -851,6 +852,7 @@
   "Choose workspace": "Seleccionar espacio de trabajo",
   "This login method requires choosing your workspace to continue": "Este método de inicio de sesión requiere elegir tu espacio de trabajo para continuar",
   "Check your email": "Revisa tu correo electrónico",
+  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "Se ha enviado un enlace mágico de inicio de sesión al correo electrónico <em>{{ emailLinkSentTo }}</em> si una cuenta asociada existe.",
   "Back to login": "Volver al inicio de sesión",
   "Get started by choosing a sign-in method for your new workspace below…": "Empieza por elegir un método de inicio de sesión para tu nuevo espacio de trabajo a continuación…",
