fix: New Czech translations from Crowdin [ci skip]

--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -818,6 +818,7 @@
   "To continue, enter your workspace’s subdomain.": "Pro pokračování zadejte subdoménu Vašeho pracovního prostoru.",
   "subdomain": "subdoména",
   "Continue": "Pokračovat",
+  "Sorry, the code you entered is invalid or has expired.": "Sorry, the code you entered is invalid or has expired.",
   "The domain associated with your email address has not been allowed for this workspace.": "Doména spojená s vaší e-mailovou adresou nebyla pro tento pracovní prostor povolena.",
   "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.": "Nelze se přihlásit. Přejděte prosím na vlastní adresu URL svého pracovního prostoru a zkuste se znovu přihlásit.<1></1> Pokud jste byli pozváni do pracovního prostoru, najdete odkaz na něj v e-mailu s pozvánkou.",
   "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.": "Je nám líto, nový účet nelze vytvořit s osobní Gmail adresou.<1></1>Použijte místo toho účet Google Workspace.",
@@ -851,6 +852,7 @@
   "Choose workspace": "Vyberte pracovní prostor",
   "This login method requires choosing your workspace to continue": "Chcete-li pokračovat, tato metoda přihlášení vyžaduje výběr pracovního prostoru",
   "Check your email": "Zkontrolujte svůj e-mail",
+  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "Na e-mail <em>{{ emailLinkSentTo }}</em> byl odeslán odkaz pro přihlášení, pokud účet existuje.",
   "Back to login": "Zpět na přihlášení",
   "Get started by choosing a sign-in method for your new workspace below…": "Začněte výběrem způsobu přihlášení pro svůj nový pracovní prostor pod…",
