--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -818,6 +818,7 @@
   "To continue, enter your workspace’s subdomain.": "To continue, enter your workspace’s subdomain.",
   "subdomain": "subdomain",
   "Continue": "Continua",
+  "Sorry, the code you entered is invalid or has expired.": "Sorry, the code you entered is invalid or has expired.",
   "The domain associated with your email address has not been allowed for this workspace.": "Il dominio associato al tuo indirizzo email non è permesso in questa area di lavoro.",
   "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.": "Impossibile effettuare l'accesso. Per favore vai all'URL personalizzato della tua area di lavoro, quindi prova di nuovo ad accedere.<1></1>Se sei stato invitato in un'area di lavoro, troverai un link di accesso nella mail d'invito.",
   "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.": "Spiacenti, non è possibile creare un nuovo account con un indirizzo Gmail personale.<1></1>Utilizza invece un account Google Workspaces.",
@@ -851,6 +852,7 @@
   "Choose workspace": "Choose workspace",
   "This login method requires choosing your workspace to continue": "This login method requires choosing your workspace to continue",
   "Check your email": "Controlla la tua email",
+  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "Un link di accesso è stato inviato all'email <em>{{ emailLinkSentTo }}</em> se esiste un account associato.",
   "Back to login": "Torna all'accesso",
   "Get started by choosing a sign-in method for your new workspace below…": "Inizia scegliendo un metodo di accesso per la tua nuova area di lavoro qui sotto…",
