--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -818,6 +818,7 @@
   "To continue, enter your workspace’s subdomain.": "続行するには、ワークスペースのサブドメインを入力してください。",
   "subdomain": "サブドメイン",
   "Continue": "次へ",
+  "Sorry, the code you entered is invalid or has expired.": "Sorry, the code you entered is invalid or has expired.",
   "The domain associated with your email address has not been allowed for this workspace.": "メールアドレスに関連付けられたドメインは、このワークスペースで許可されていません。",
   "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.": "ログインできません。ワークスペースのカスタム URL に移動し、再度ログインをお試しください。<1></1>ワークスペースに招待された場合、招待メールにリンクが表示されます。",
   "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.": "個人のGmailアドレスで新しいアカウントを作成することはできません。\n<1></1>代わりにGoogle Workspace のアカウントを使用してください。",
@@ -851,6 +852,7 @@
   "Choose workspace": "ワークスペースを選択",
   "This login method requires choosing your workspace to continue": "現在のログイン方法では、ワークスペースを選択して続行する必要があります",
   "Check your email": "メールをご確認ください",
+  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "<em>{{ emailLinkSentTo }}</em>が登録されている場合、そのメールアドレスにログイン用の URL が送信されました。",
   "Back to login": "ログイン画面に戻る",
   "Get started by choosing a sign-in method for your new workspace below…": "新しいワークスペースのログイン方法を以下から選択して始めましょう…",
