fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -818,6 +818,7 @@
   "To continue, enter your workspace’s subdomain.": "Aby kontynuować, wpisz subdomenę swojego obszaru roboczego.",
   "subdomain": "subdomena",
   "Continue": "Dalej",
+  "Sorry, the code you entered is invalid or has expired.": "Sorry, the code you entered is invalid or has expired.",
   "The domain associated with your email address has not been allowed for this workspace.": "Domena powiązana z Twoim adresem e-mail nie została zezwolona dla tego obszaru roboczego.",
   "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.": "Nie można się zalogować. Przejdź do niestandardowego adresu URL swojego obszaru roboczego, a następnie spróbuj ponownie się zalogować.<1></1>Jeśli zostałeś zaproszony do obszaru roboczego, znajdziesz link do niego w e-mailu z zaproszeniem.",
   "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.": "Przepraszamy, nie można utworzyć nowego konta przy użyciu osobistego adresu Gmail.<1></1>Prosimy zamiast tego użyć konta Google Workspaces",
@@ -851,6 +852,7 @@
   "Choose workspace": "Wybierz obszar roboczy",
   "This login method requires choosing your workspace to continue": "Ta metoda logowania wymaga wyboru obszaru roboczego, aby kontynuować",
   "Check your email": "Sprawdź swoją skrzynkę e-mail",
+  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "Magiczny link do logowania został wysłany na adres e-mail <em>{{ emailLinkSentTo }}</em>, jeśli konto istnieje.",
   "Back to login": "Wróć do logowania",
   "Get started by choosing a sign-in method for your new workspace below…": "Rozpocznij, wybierając poniżej metodę logowania do nowego obszaru roboczego...",
