--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -818,6 +818,7 @@
   "To continue, enter your workspace’s subdomain.": "Para continuar, insira o subdomínio da área de trabalho.",
   "subdomain": "subdomínio",
   "Continue": "Continuar",
+  "Sorry, the code you entered is invalid or has expired.": "Sorry, the code you entered is invalid or has expired.",
   "The domain associated with your email address has not been allowed for this workspace.": "O domínio associado ao seu endereço de e-mail não foi permitido para esta área de trabalho.",
   "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.": "Não foi possível entrar. Navegue até a URL personalizada da sua área de trabalho e tente iniciar a sessão novamente. <1></1>se foi convidado para uma área de trabalho, encontrará uma ligação no e-mail do convite.",
   "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.": "Não foi possível criar uma nova conta com um endereço pessoal do Gmail. <1></1>Em vez disso, use uma conta Google Workspaces.",
@@ -851,6 +852,7 @@
   "Choose workspace": "Escolher área de trabalho",
   "This login method requires choosing your workspace to continue": "Este método de autenticação requer a escolha da sua área de trabalho para continuar",
   "Check your email": "Verifica o e-mail",
+  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "A ligação mágica de login foi enviado para o e-mail <em>{{ emailLinkSentTo }}</em> se a conta existir.",
   "Back to login": "Voltar ao início de sessão",
   "Get started by choosing a sign-in method for your new workspace below…": "Comece escolhendo um método de autenticação para a nova área de trabalho abaixo de…",
