fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -818,6 +818,7 @@
   "To continue, enter your workspace’s subdomain.": "För att fortsätta, ange arbetsytans underdomän.",
   "subdomain": "subdomän",
   "Continue": "Fortsätt",
+  "Sorry, the code you entered is invalid or has expired.": "Sorry, the code you entered is invalid or has expired.",
   "The domain associated with your email address has not been allowed for this workspace.": "Domänen som är kopplad till din e-postadress har inte tillåtits för denna arbetsyta.",
   "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.": "Det gick inte att logga in. Vänligen navigera till arbetsytans anpassade URL, försök sedan logga in igen. <1></1>Om du blev inbjuden till en arbetsyta, hittar du en länk till den i inbjudningsmailet.",
   "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.": "Tyvärr, ett nytt konto kan inte skapas med en personlig Gmail-adress.<1></1>Använd ett Google Workspaces konto istället.",
@@ -851,6 +852,7 @@
   "Choose workspace": "Välj arbetsyta",
   "This login method requires choosing your workspace to continue": "Denna inloggningsmetod kräver att du väljer din arbetsyta för att fortsätta",
   "Check your email": "Kolla din e-post",
+  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "En magisk inloggningslänk har skickats till e-postmeddelandet <em>{{ emailLinkSentTo }}</em> om det finns ett konto.",
   "Back to login": "Tillbaka till inloggning",
   "Get started by choosing a sign-in method for your new workspace below…": "Kom igång med att välja en inloggningsmetod för din nya arbetsyta nedan…",
