--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -818,6 +818,7 @@
   "To continue, enter your workspace’s subdomain.": "Щоб продовжити, введіть піддомен вашого робочого середовища.",
   "subdomain": "піддомен",
   "Continue": "Продовжити",
+  "Sorry, the code you entered is invalid or has expired.": "Sorry, the code you entered is invalid or has expired.",
   "The domain associated with your email address has not been allowed for this workspace.": "Домен, пов'язаний з вашою електронною адресою, не був дозволений для робочої області.",
   "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.": "Неможливо увійти. Будь ласка, перейдіть до користувацької URL-адреси робочої області, потім спробуйте увійти знову. <1></1>Якщо ви були запрошені на робочу область, знайдіть посилання на неї в електронному листі із запрошенням.",
   "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.": "На жаль, новий обліковий запис не можна створити з особистою адресою Gmail.<1></1> Натомість використовуйте обліковий запис Google Workspaces.",
@@ -851,6 +852,7 @@
   "Choose workspace": "Вибрати робочий простір",
   "This login method requires choosing your workspace to continue": "Цей метод входу вимагає вибору робочого простору, щоб продовжити",
   "Check your email": "Перевірте свою е-пошту",
+  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "Чарівне посилання для входу було надіслано на електронну адресу <em>{{ emailLinkSentTo }}</em> , якщо обліковий запис існує.",
   "Back to login": "Повернутися на сторінку входу",
   "Get started by choosing a sign-in method for your new workspace below…": "Почнемо з вибору методу входу для нового робочого простору нижче…",
