--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -818,6 +818,7 @@
   "To continue, enter your workspace’s subdomain.": "輸入工作區的子網域以繼續",
   "subdomain": "子網域",
   "Continue": "繼續",
+  "Sorry, the code you entered is invalid or has expired.": "Sorry, the code you entered is invalid or has expired.",
   "The domain associated with your email address has not been allowed for this workspace.": "此工作區不允許與您的電子郵件地址的網域。",
   "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.": "無法登入。請瀏覽至您工作區的自訂URL，再重新嘗試登入。<1></1>如果您是被邀請至工作區，你會在邀請信件中找到連結。",
   "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.": "抱歉，無法使用個人 Gmail 地址建立新帳號。<1></1>請改用 Google Workspaces 帳號。",
@@ -851,6 +852,7 @@
   "Choose workspace": "選擇工作區",
   "This login method requires choosing your workspace to continue": "此登入方法需要選擇您的工作區才能繼續",
   "Check your email": "確認您的電子郵件",
+  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "如果帳戶存在，登錄連結會被發送到以下電子郵件 <em>{{ emailLinkSentTo }}</em>。",
   "Back to login": "返回登入頁面",
   "Get started by choosing a sign-in method for your new workspace below…": "請為你新建的工作區選擇一種登入方式...",
