fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -818,6 +818,7 @@
   "To continue, enter your workspace’s subdomain.": "To continue, enter your workspace’s subdomain.",
   "subdomain": "tên miền phụ",
   "Continue": "Tiếp tục",
+  "Sorry, the code you entered is invalid or has expired.": "Sorry, the code you entered is invalid or has expired.",
   "The domain associated with your email address has not been allowed for this workspace.": "Tên miền email của bạn không được chấp nhận cho không gian làm việc này.",
   "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.": "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.",
   "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.": "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.",
@@ -851,6 +852,7 @@
   "Choose workspace": "Chọn không gian làm việc",
   "This login method requires choosing your workspace to continue": "Phương thức đăng nhập này yêu cầu chọn không gian làm việc của bạn để tiếp tục",
   "Check your email": "Kiểm tra email của bạn",
+  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "Một liên kết đăng nhập kỳ diệu đã được gửi tới email <em>{{ emailLinkSentTo }}</em> nếu có tài khoản.",
   "Back to login": "Quay lại đăng nhập",
   "Get started by choosing a sign-in method for your new workspace below…": "Bắt đầu bằng cách chọn phương thức đăng nhập cho không gian làm việc mới của bạn dưới…",
