fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -818,6 +818,7 @@
   "To continue, enter your workspace’s subdomain.": "Para continuar, insira o subdomínio do espaço de trabalho.",
   "subdomain": "subdomínio",
   "Continue": "Continuar",
+  "Sorry, the code you entered is invalid or has expired.": "Sorry, the code you entered is invalid or has expired.",
   "The domain associated with your email address has not been allowed for this workspace.": "O domínio associado ao seu endereço de email não foi permitido para este espaço de trabalho.",
   "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.": "Não foi possível entrar. Navegue até a URL personalizada do seu espaço de trabalho e tente iniciar a sessão novamente. <1></1>Se você foi convidado para uma área de trabalho, você encontrará um link no e-mail do convite.",
   "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.": "Desculpe, não é possível criar uma nova conta com um endereço pessoal do Gmail. <1></1>Em vez disso, utilize uma conta do Google Workspaces.",
@@ -851,6 +852,7 @@
   "Choose workspace": "Escolha o espaço de trabalho",
   "This login method requires choosing your workspace to continue": "Este método de login requer a escolha do seu espaço de trabalho para continuar",
   "Check your email": "Verifique seu e-mail",
+  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "Um link de login mágico foi enviado para o e-mail <em>{{ emailLinkSentTo }}</em> se uma conta existir.",
   "Back to login": "Voltar ao login",
   "Get started by choosing a sign-in method for your new workspace below…": "Comece escolhendo um método de login para seu novo espaço de trabalho abaixo…",
