fix: New Indonesian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -818,6 +818,7 @@
   "To continue, enter your workspace’s subdomain.": "To continue, enter your workspace’s subdomain.",
   "subdomain": "subdomain",
   "Continue": "Lanjut",
+  "Sorry, the code you entered is invalid or has expired.": "Sorry, the code you entered is invalid or has expired.",
   "The domain associated with your email address has not been allowed for this workspace.": "Domain yang dikaitkan dengan alamat email Anda belum diizinkan untuk workspace ini.",
   "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.": "Tidak dapat masuk. Buka URL khusus workspace Anda, lalu coba masuk lagi.<1></1> Jika Anda diundang ke workspace, Anda akan menemukan tautan ke workspace tersebut di email undangan.",
   "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.": "Maaf, akun baru tidak dapat dibuat dengan alamat Gmail pribadi.<1></1> Harap gunakan akun Google Workspaces sebagai gantinya.",
@@ -851,6 +852,7 @@
   "Choose workspace": "Pilih workspace",
   "This login method requires choosing your workspace to continue": "Metode login ini mengharuskan memilih workspace Anda untuk melanjutkan",
   "Check your email": "Periksa surel Anda",
+  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "Tautan ajaib untuk masuk sudah dikirim ke <em>{{ emailLinkSentTo }}</em> jika akun tersebut ada.",
   "Back to login": "Kembali ke Login",
   "Get started by choosing a sign-in method for your new workspace below…": "Mulailah dengan memilih metode masuk untuk workspace baru Anda di bawah…",
