--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -818,6 +818,7 @@
   "To continue, enter your workspace’s subdomain.": "For å fortsette, angi arbeidsområdets underdomene.",
   "subdomain": "underdomene",
   "Continue": "Fortsett",
+  "Sorry, the code you entered is invalid or has expired.": "Sorry, the code you entered is invalid or has expired.",
   "The domain associated with your email address has not been allowed for this workspace.": "Domene tilknyttet din e-postadresse har ikke blitt tillatt for dette arbeidsområdet.",
   "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.": "Kunne ikke logge inn. Vennligst naviger til arbeidsområdes tilpassede URL, og prøv å logge inn igjen.<1></1>Hvis du ble invitert til et arbeidsområde, finner du en lenke til det i invitasjons-e-posten.",
   "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.": "Beklager, en ny konto kan ikke opprettes med en personlig Gmail-adresse.<1></1>Vennligst bruk en Google Workspaces-konto i stedet.",
@@ -851,6 +852,7 @@
   "Choose workspace": "Velg arbeidsområde",
   "This login method requires choosing your workspace to continue": "Denne innloggingsmetoden krever at du velger arbeidsområdet ditt for å fortsette",
   "Check your email": "Sjekk e-posten din",
+  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "En magisk innloggingslenke har blitt sendt til e-posten <em>{{ emailLinkSentTo }}</em> hvis en konto eksisterer.",
   "Back to login": "Tilbake til innlogging",
   "Get started by choosing a sign-in method for your new workspace below…": "Kom i gang ved å velge en innloggingsmetode for ditt nye arbeidsområde nedenfor…",
