fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -675,7 +675,7 @@
   "Done editing": "Done editing",
   "Restore version": "Ripristina versione",
   "No history yet": "Nessuna cronologia",
-  "Source": "Source",
+  "Source": "Origine",
   "Imported from {{ source }}": "Imported from {{ source }}",
   "Stats": "Statistiche",
   "{{ count }} minute read": "{{ count }} minuto da leggere",
