--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -122,7 +122,7 @@
   "Archive all notifications": "Archivia tutte le notifiche",
   "New App": "New App",
   "New Application": "Nuova Applicazione",
-  "This version of the document was deleted": "This version of the document was deleted",
+  "This version of the document was deleted": "Questa versione del documento è stata eliminata",
   "Link copied": "Collegamento copiato",
   "Dark": "Scuro",
   "Light": "Chiaro",
@@ -164,7 +164,7 @@
   "Public document sharing": "Condivisione pubblica dei documenti",
   "Allow documents within this collection to be shared publicly on the internet.": "Consenti ai documenti all'interno di questa raccolta di essere condivisi su internet.",
   "Commenting": "Commentando",
-  "Allow commenting on documents within this collection.": "Allow commenting on documents within this collection.",
+  "Allow commenting on documents within this collection.": "Consenti i commenti ai documenti in questa collezione",
   "Saving": "Salvataggio",
   "Save": "Salva",
   "Creating": "Creazione",
@@ -239,7 +239,7 @@
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Spiacenti, si è verificato un errore irreversibile{{notified}}. Prova a ricaricare la pagina, potrebbe essere un problema temporaneo.",
   "our engineers have been notified": "i nostri ingegneri sono stati informati",
   "Show detail": "Mostra dettagli",
-  "Revision deleted": "Revision deleted",
+  "Revision deleted": "Revisione eliminata",
   "Current version": "Versione corrente",
   "{{userName}} edited": "{{userName}} modificato",
   "{{userName}} archived": "{{userName}} archiviato",
@@ -364,8 +364,8 @@
   "Publish to internet": "Pubblica su internet",
   "Search engine indexing": "Indicizzazione nei motori di ricerca",
   "Disable this setting to discourage search engines from indexing the page": "Disabilita questa impostazione per scoraggiare i motori di ricerca dall'indicizzare la pagina",
-  "Show last modified": "Show last modified",
-  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Show last modified": "Mostra l'ultima modifica",
+  "Display the last modified timestamp on the shared page": "Mostra la data dell'ultima modifica nella pagina condivisa",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "I documenti nidificati non sono condivisi sul web. Attiva la condivisione per abilitare l'accesso, questo sarà il comportamento predefinito in futuro.\n\n\n\n\n\n\n\n\n",
   "{{ userName }} was added to the document": "È stato aggiunto al documento",
   "{{ count }} people added to the document": "È stato aggiunto al documento",
@@ -453,7 +453,7 @@
   "Create a new child doc": "Crea un nuovo documento",
   "Delete table": "Elimina tabella",
   "Delete file": "Cancella file",
-  "Width x Height": "Width x Height",
+  "Width x Height": "Larghezza x altezza",
   "Download file": "Scarica il file",
   "Replace file": "Sostituisci file",
   "Delete image": "Elimina immagine",
@@ -462,11 +462,11 @@
   "Italic": "Corsivo",
   "Sorry, that link won’t work for this embed type": "Siamo spiacenti, questo link non funzionerà per questo tipo di embed",
   "File attachment": "File allegato",
-  "Enter a link": "Enter a link",
+  "Enter a link": "Inserisci un link",
   "Big heading": "Titolo grande",
   "Medium heading": "Titolo medio",
   "Small heading": "Titolo piccolo",
-  "Extra small heading": "Extra small heading",
+  "Extra small heading": "Intestazione molto piccola",
   "Heading": "Titolo",
   "Divider": "Divisore",
   "Image": "Immagine",
@@ -492,15 +492,15 @@
   "Strikethrough": "Testo barrato",
   "Bold": "Grassetto",
   "Subheading": "Sottotitolo",
-  "Sort ascending": "Sort ascending",
-  "Sort descending": "Sort descending",
+  "Sort ascending": "Ordinamento crescente",
+  "Sort descending": "Ordinamento decrescente",
   "Table": "Tabella",
-  "Export as CSV": "Export as CSV",
+  "Export as CSV": "Esporta in CSV",
   "Toggle header": "Attiva/disattiva Intestazione",
   "Math inline (LaTeX)": "Matematica espressione in linea (LaTeX)",
   "Math block (LaTeX)": "Matematica blocco codice (LaTeX)",
-  "Merge cells": "Merge cells",
-  "Split cell": "Split cell",
+  "Merge cells": "Unisci celle",
+  "Split cell": "Dividi cella",
   "Tip": "Suggerimento",
   "Tip notice": "Nota di suggerimento",
   "Warning": "Avviso",
@@ -518,17 +518,17 @@
   "Unsubscribed from document": "Annullata l'iscrizione al documento",
   "Unsubscribed from collection": "Annullata l'iscrizione alla raccolta",
   "Account": "Account",
-  "API & Apps": "API & Apps",
+  "API & Apps": "API & Applicazioni",
   "Details": "Dettagli",
   "Security": "Sicurezza",
   "Features": "Caratteristiche",
   "Members": "Membri",
   "Groups": "Gruppi",
   "API Keys": "Chiavi API",
-  "Applications": "Applications",
+  "Applications": "Applicazioni",
   "Shared Links": "Link condivisi",
   "Import": "Importa",
-  "Install": "Install",
+  "Install": "Installa",
   "Integrations": "Integrazioni",
   "Revoke token": "Revoca token",
   "Revoke": "Revoca",
@@ -547,7 +547,7 @@
   "Document options": "Opzioni documento",
   "Choose a collection": "Scegli una raccolta",
   "Subscription inherited from collection": "Iscrizione ereditata dalla raccolta",
-  "Apply template": "Apply template",
+  "Apply template": "Applica modello",
   "Enable embeds": "Abilita l'embedding",
   "Export options": "Opzioni di esportazione",
   "Group members": "Membri del gruppo",
@@ -561,10 +561,10 @@
   "New child document": "Nuovo documento annidato",
   "Save in workspace": "Salva nello spazio di lavoro",
   "Notification settings": "Impostazioni di notifica",
-  "Revoke {{ appName }}": "Revoke {{ appName }}",
+  "Revoke {{ appName }}": "Revoca {{ appName }}",
   "Revoking": "Sto revocando",
-  "Are you sure you want to revoke access?": "Are you sure you want to revoke access?",
-  "Delete app": "Delete app",
+  "Are you sure you want to revoke access?": "Sei sicuro di voler revocare l'accesso?",
+  "Delete app": "Elimina app",
   "Revision options": "Opzioni revisione",
   "Share link revoked": "Link condivisione revocato",
   "Share link copied": "Link di condivisione copiato",
@@ -589,22 +589,22 @@
   "edited": "modificato",
   "created the collection": "Ha creato la raccolta",
   "mentioned you in": "Ti ha menzionato in",
-  "left a comment on": "left a comment on",
-  "resolved a comment on": "resolved a comment on",
-  "shared": "shared",
+  "left a comment on": "Lasciato un commento",
+  "resolved a comment on": "Risolto un commento",
+  "shared": "condiviso",
   "invited you to": "Ti ha invitato a",
-  "Choose a date": "Choose a date",
-  "API key created. Please copy the value now as it will not be shown again.": "API key created. Please copy the value now as it will not be shown again.",
-  "Scopes": "Scopes",
-  "Space-separated scopes restrict the access of this API key to specific parts of the API. Leave blank for full access": "Space-separated scopes restrict the access of this API key to specific parts of the API. Leave blank for full access",
-  "Expiration": "Expiration",
-  "Never expires": "Never expires",
+  "Choose a date": "Seleziona una data",
+  "API key created. Please copy the value now as it will not be shown again.": "Chiave API creata. Si prega di copiare il valore ora perché non verrà mostrato di nuovo.",
+  "Scopes": "Ambiti",
+  "Space-separated scopes restrict the access of this API key to specific parts of the API. Leave blank for full access": "Gli ambiti separati da spazi limitano l'accesso di questa chiave API a parti specifiche dell'API. Lasciare vuoto per l'accesso completo",
+  "Expiration": "Scadenza",
+  "Never expires": "Non scade mai",
   "7 days": "7 giorni",
-  "30 days": "30 days",
-  "60 days": "60 days",
-  "90 days": "90 days",
+  "30 days": "30 giorni",
+  "60 days": "60 giorni",
+  "90 days": "90 giorni",
   "Custom": "Custom",
-  "No expiration": "No expiration",
+  "No expiration": "Nessuna scadenza",
   "The document archive is empty at the moment.": "L'archivio documenti è vuoto al momento.",
   "Collection menu": "Menù raccolte",
   "Drop documents to import": "Trascina qui i documenti oppure",
@@ -621,7 +621,7 @@
   "Sorry, an error occurred saving the collection": "Spiacenti, si è verificato un errore durante il salvataggio della raccolta",
   "Add a description": "Aggiungi una descrizione",
   "Share": "Condividi",
-  "Overview": "Overview",
+  "Overview": "Descrizione",
   "Recently updated": "Aggiornati di recente",
   "Recently published": "Pubblicati di recente",
   "Least recently updated": "Aggiornati meno recentemente",
@@ -633,16 +633,16 @@
   "Add a reply": "Aggiungi una risposta",
   "Reply": "Rispondi",
   "Post": "Pubblica",
-  "Upload image": "Upload image",
+  "Upload image": "Carica immagine",
   "No resolved comments": "No resolved comments",
   "No comments yet": "Nessun commento",
-  "New comments": "New comments",
-  "Most recent": "Most recent",
+  "New comments": "Nuovi commenti",
+  "Most recent": "Più recente",
   "Order in doc": "Order in doc",
-  "Resolved": "Resolved",
-  "Sort comments": "Sort comments",
+  "Resolved": "Risolto",
+  "Sort comments": "Ordina commenti",
   "Show {{ count }} reply": "Show {{ count }} reply",
-  "Show {{ count }} reply_plural": "Show {{ count }} replies",
+  "Show {{ count }} reply_plural": "Mostra {{ count }} risposte",
   "Error updating comment": "Errore durante l'aggiornamento del commento",
   "Document is too large": "Il documento è troppo grande",
   "This document has reached the maximum size and can no longer be edited": "Questo documento ha raggiunto la dimensione massima e non può più essere modificato",
@@ -666,13 +666,13 @@
   "Type '/' to insert, or start writing…": "Digita '/' per inserire, o inizia a scrivere…",
   "Hide contents": "Nascondi contenuti",
   "Show contents": "Mostra contenuti",
-  "available when headings are added": "available when headings are added",
+  "available when headings are added": "disponibile quando vengono aggiunte le intestazioni",
   "Edit {{noun}}": "Modifica {{noun}}",
   "Switch to dark": "Passa al tema scuro",
   "Switch to light": "Passa al tema chiaro",
   "Archived": "Archiviati",
-  "Save draft": "Save draft",
-  "Done editing": "Done editing",
+  "Save draft": "Salva bozza",
+  "Done editing": "Modifica Completata",
   "Restore version": "Ripristina versione",
   "No history yet": "Nessuna cronologia",
   "Source": "Origine",
