fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -740,6 +740,8 @@
   "Your account has been suspended": "계정사용이 중지 되었습니다",
   "Warning Sign": "경고 표시",
   "A workspace admin (<em>{{ suspendedContactEmail }}</em>) has suspended your account. To re-activate your account, please reach out to them directly.": "워크스페이스 관리자 (<em>{{ suspendedContactEmail }}</em>) (이)가 귀하의 계정 사용을 중지시켰습니다. 계정을 다시 활성화하려면 해당 관리자에게 직접 문의하십시오.",
+  "Something went wrong": "문제가 발생했습니다",
+  "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.": "Sorry, an unknown error occurred loading the page. Please try again or contact support if the issue persists.",
   "Created by me": "내가 생성함",
   "Weird, this shouldn’t ever be empty": "이상하네, 여기가 비어 있으면 안 되는데",
   "You haven’t created any documents yet": "아직 문서를 만들지 않았습니다.",
@@ -897,7 +899,6 @@
   "Remove search": "검색 기록 제거",
   "Any author": "모든 작성자",
   "Search titles only": "제목에서만 찾기",
-  "Something went wrong": "문제가 발생했습니다",
   "Please try again or contact support if the problem persists": "다시 한 번 시도해 보시고 문제가 계속된다면 문의해주세요",
   "No documents found for your search filters.": "검색조건과 맞는 문서를 찾을 수 없습니다.",
   "Create personal API keys to authenticate with the API and programatically control\n      your workspace's data. For more details see the <em>developer documentation</em>.": "개인 API 키를 생성하여 API를 인증하고 작업 공간 데이터를 프로그래밍 방식으로 제어하세요.\n      자세한 내용은 <em>개발자 문서</em>를 참조하세요.",
