fix: New Portuguese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -30,7 +30,7 @@
   "Thread resolved": "Tópico resolvido",
   "Mark as unresolved": "Marcar como por resolver",
   "View reactions": "View reactions",
-  "Reactions": "Reactions",
+  "Reactions": "Reações",
   "Copy ID": "Copiar ID",
   "Clear IndexedDB cache": "Apagar cache do IndexedDB",
   "IndexedDB cache cleared": "Cache do IndexedDB apagada",
